--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vt2u-client</title>
+    <title>こえからわかるくん</title>
   </head>
   <body>
     <div id="root"></div>
